# schc-endpoint

./: .env.example  CMakeLists.txt  README.md  conanfile.txt  config.cmake  requirements.txt
app/: config.py  decompressor.py  forwarder.py  main.py  models.py
config/: log.conf
include/schc_endpoint/: logger_helper.h  schc_service.h
src/: CMakeLists.txt  logger_helper.c  main.c  schc_service.c
tests/: conftest.py  sample_uplink.json  test_decompressor.py  test_uplink.py
